# distorch

./: CORRECTNESS.md  README.md  compute_metrics.py  pyproject.toml
distorch/: __init__.py  boundary.py  cucim_metrics.py  distance_transform.py  metrics.py  minimum_pairwise_distance.py  segmentation.py  surface.py  utils.py
distorch/min_pairwise_distance/: __init__.py  cpu.py  cuda.py
examples/: benchmark_monai.py  compare_distorch_monai.py
figures/: CORRECTNESS_figures.py
tests/: test_boundary.py  test_distance_transform.py
