[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "distorch"
authors = [
    { name = "Hoel Kervadec" },
    { name = "Jérôme Rony" },
]
description = "Efficient and accurate tools for distance analysis in PyTorch"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "pykeops>=2.2",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["distorch"]

[tool.setuptools.dynamic]
version = { attr = "distorch.__version__" }

[project.urls]
Repository = "https://github.com/jeromerony/distorch.git"